--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
 
     <org.springframework.version>4.3.7.RELEASE</org.springframework.version>
   </properties>
@@ -190,6 +190,13 @@
       <version>1.3.2</version>
     </dependency>
     <!-- spring end -->
+
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-servlet-api</artifactId>
+      <version>8.0.36</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
