--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,5 @@ services:
     image: registry.cn-hangzhou.aliyuncs.com/aero_bro/fei:backend
     ports:
       - 8083:8080
+    volumes:
+     - ../jdk1.8.0_251:/jdk
